--- a/python/settings.ini
+++ b/python/settings.ini
@@ -1,4 +1,4 @@
 [mainwindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x1\0\0\xff\xff\xff\xf8\0\0\0\x10\0\0\0\xcf\0\0\0\x9b\0\0\0\0\0\0\0\x30\0\0\0\xc7\0\0\0\x93\0\0\0\0\0\0)
-windowstate=@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\0\0\0\0\xc8\0\0\0\x64\0\0\0\x4\0\0\0\x4\0\0\0\b\0\0\0\b\xfc\0\0\0\0)
-dockstate="{'float': [], 'main': ('vertical', [('dock', 'Blank Widget', {})], {'sizes': [100]})}"
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x1\0\0\0\0\0\xfd\0\0\0\x10\0\0\x2\xc4\0\0\x2&\0\0\x1\x5\0\0\0\x30\0\0\x2\xbc\0\0\x2\x1e\0\0\0\0\0\0)
+windowstate=@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\0\0\0\x1\xb8\0\0\x1\xef\0\0\0\x4\0\0\0\x4\0\0\0\b\0\0\0\b\xfc\0\0\0\0)
+dockstate="{'float': [], 'main': ('vertical', [('dock', 'Dual Temp. Cont.', {})], {'sizes': [495]})}"
