--- a/python/settings.ini
+++ b/python/settings.ini
@@ -1,4 +1,7 @@
+[DualTempCont]
+data_dict="OrderedDict([('Servo Enable 0:', False), ('Set Resistance 0 (kOhm):', 10.0), ('P gain 0:', 1.0), ('PI Pole 0 (Hz):', 2.0), ('PD Pole 0 (Hz):', 10.0), ('Servo Enable 1:', False), ('Set Resistance 1 (kOhm):', 10.0), ('P gain 1:', 1.0), ('PI Pole 1 (Hz):', 2.0), ('PD Pole 1 (Hz):', 10.0)])"
+
 [mainwindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x1\0\0\0\0\0\xfd\0\0\0\x10\0\0\x2\xc4\0\0\x2&\0\0\x1\x5\0\0\0\x30\0\0\x2\xbc\0\0\x2\x1e\0\0\0\0\0\0)
-windowstate=@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\0\0\0\x1\xb8\0\0\x1\xef\0\0\0\x4\0\0\0\x4\0\0\0\b\0\0\0\b\xfc\0\0\0\0)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x1\0\0\0\0\0-\0\0\0\x10\0\0\x1\xb7\0\0\x2&\0\0\0\x35\0\0\0\x30\0\0\x1\xaf\0\0\x2\x1e\0\0\0\0\0\0)
+windowstate=@ByteArray(\0\0\0\xff\0\0\0\0\xfd\0\0\0\0\0\0\x1{\0\0\x1\xef\0\0\0\x4\0\0\0\x4\0\0\0\b\0\0\0\b\xfc\0\0\0\0)
 dockstate="{'float': [], 'main': ('vertical', [('dock', 'Dual Temp. Cont.', {})], {'sizes': [495]})}"
